fixed the margin spacing of heading and aboutus content text

--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -233,7 +233,7 @@ section
 .about-content,
 .last-p
   h2
-    margin-bottom: 30px
+    margin-bottom: 12px
   p
     font-size: 16px
     margin-bottom: 0px
